--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "lattice",
   "private": true,
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hejhi/lattice"
+  },
   "type": "module",
   "workspaces": [
     "packages/*",
