--- a/packages/lattice/package.json
+++ b/packages/lattice/package.json
@@ -4,6 +4,18 @@
   "description": "Core framework-agnostic behavior composition layer for Lattice components",
   "author": "Lattice Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hejhi/lattice",
+    "directory": "packages/lattice"
+  },
+  "keywords": [
+    "lattice",
+    "composition",
+    "modules",
+    "dependency-injection",
+    "framework"
+  ],
   "type": "module",
   "import": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -33,6 +45,11 @@
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "sideEffects": false,
   "publishConfig": {
     "access": "public"
