--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,6 +4,18 @@
   "description": "React bindings for Lattice signals and stores",
   "author": "Lattice Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hejhi/lattice",
+    "directory": "packages/react"
+  },
+  "keywords": [
+    "lattice",
+    "react",
+    "signals",
+    "hooks",
+    "state-management"
+  ],
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
