--- a/packages/resource/package.json
+++ b/packages/resource/package.json
@@ -4,6 +4,18 @@
   "description": "Async data fetching with reactive dependency tracking for Lattice",
   "author": "Lattice Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hejhi/lattice",
+    "directory": "packages/resource"
+  },
+  "keywords": [
+    "lattice",
+    "resource",
+    "async",
+    "data-fetching",
+    "reactive"
+  ],
   "type": "module",
   "exports": {
     ".": {
