--- a/package.json
+++ b/package.json
@@ -29,32 +29,35 @@
     "release": "pnpm build && changeset publish"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.29.5",
-    "@eslint/js": "^9.25.0",
-    "@microsoft/api-documenter": "^7.28.1",
-    "@microsoft/api-extractor": "^7.55.1",
-    "@typescript-eslint/eslint-plugin": "^8.30.1",
-    "@typescript-eslint/parser": "^8.30.1",
-    "eslint": "^9.25.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-storybook": "^0.12.0",
-    "lerna": "^8.2.2",
-    "prettier": "^3.5.3",
-    "tdd-guard-vitest": "^0.1.5",
-    "terser": "^5.36.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^7.1.1",
-    "vitest": "^3.2.4"
+    "@changesets/cli": "2.29.8",
+    "@eslint/js": "9.39.1",
+    "@microsoft/api-documenter": "7.28.2",
+    "@microsoft/api-extractor": "7.55.2",
+    "@typescript-eslint/eslint-plugin": "8.49.0",
+    "@typescript-eslint/parser": "8.49.0",
+    "eslint": "9.39.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "eslint-plugin-storybook": "10.1.7",
+    "lerna": "9.0.3",
+    "prettier": "3.7.4",
+    "tdd-guard-vitest": "0.1.6",
+    "terser": "5.44.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.49.0",
+    "vite": "7.2.7",
+    "vitest": "4.0.15"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "pnpm": {
     "overrides": {
-      "tinypool": "^1.0.4"
-    }
+      "tinypool": "1.0.4"
+    },
+    "ignoredBuiltDependencies": [
+      "nx"
+    ]
   }
 }
