--- a/packages/benchmarks/frameworks/lattice-keyed/package.json
+++ b/packages/benchmarks/frameworks/lattice-keyed/package.json
@@ -19,16 +19,16 @@
     "url": "https://github.com/krausest/js-framework-benchmark.git"
   },
   "dependencies": {
+    "@lattice/lattice": "workspace:*",
     "@lattice/signals": "workspace:*",
-    "@lattice/view": "workspace:*",
-    "@lattice/lattice": "workspace:*"
+    "@lattice/view": "workspace:*"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "15.3.0",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "rollup": "4.28.1",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.3"
+    "@rollup/plugin-node-resolve": "16.0.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "12.3.0",
+    "rollup": "4.53.3",
+    "tslib": "2.8.1",
+    "typescript": "5.9.3"
   }
 }
