--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -16,26 +16,26 @@
   "devDependencies": {
     "@lattice/lattice": "workspace:*",
     "@lattice/signals": "workspace:*",
-    "@preact/signals-core": "^1.8.0",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@testing-library/react": "^14.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^19.1.6",
-    "glob": "^11.0.3",
-    "jsdom": "^25.0.0",
-    "mitata": "^1.0.34",
-    "mobx": "^6.13.6",
-    "pinia": "^2.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "terser": "^5.36.0",
-    "tsx": "^4.7.0",
-    "vite": "^7.1.1",
-    "vitest": "^3.2.4",
-    "vue": "^3.5.0"
+    "@preact/signals-core": "1.12.1",
+    "@reduxjs/toolkit": "2.11.1",
+    "@testing-library/react": "16.3.0",
+    "@types/node": "25.0.1",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "glob": "13.0.0",
+    "jsdom": "27.3.0",
+    "mitata": "1.0.34",
+    "mobx": "6.15.0",
+    "pinia": "3.0.4",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "terser": "5.44.1",
+    "tsx": "4.21.0",
+    "vite": "7.2.7",
+    "vitest": "4.0.15",
+    "vue": "3.5.25"
   },
   "dependencies": {
-    "alien-signals": "^2.0.5"
+    "alien-signals": "3.1.1"
   }
 }
