--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -20,34 +20,34 @@
     "@lattice/lattice": "workspace:*",
     "@lattice/react": "workspace:*",
     "@lattice/signals": "workspace:*",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.525.0",
-    "postcss": "^8.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-resizable-panels": "^3.0.6",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.4.0",
-    "vaul": "^1.1.2"
+    "@radix-ui/react-dialog": "1.1.15",
+    "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-select": "2.2.6",
+    "@radix-ui/react-slot": "1.2.4",
+    "@radix-ui/react-tabs": "1.1.13",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.560.0",
+    "postcss": "8.5.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-resizable-panels": "3.0.6",
+    "tailwind-merge": "3.4.0",
+    "tw-animate-css": "1.4.0",
+    "vaul": "1.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/chrome": "^0.0.331",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitest/ui": "^3.2.4",
-    "@wxt-dev/module-react": "^1.1.5",
-    "globals": "^16.5.0",
-    "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3",
-    "vite": "^6.4.1",
-    "vitest": "^3.2.4",
-    "wxt": "^0.20.11"
+    "@tailwindcss/postcss": "4.1.18",
+    "@types/chrome": "0.1.32",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@vitest/ui": "4.0.15",
+    "@wxt-dev/module-react": "1.1.5",
+    "globals": "16.5.0",
+    "tailwindcss": "4.1.18",
+    "typescript": "5.9.3",
+    "vite": "7.2.7",
+    "vitest": "4.0.15",
+    "wxt": "0.20.11"
   }
 }
