--- a/packages/examples/devtools/package.json
+++ b/packages/examples/devtools/package.json
@@ -14,7 +14,7 @@
     "@lattice/view": "workspace:*"
   },
   "devDependencies": {
-    "vite": "^6.0.5",
-    "typescript": "^5.8.3"
+    "typescript": "5.9.3",
+    "vite": "7.2.7"
   }
 }
