--- a/packages/examples/react/package.json
+++ b/packages/examples/react/package.json
@@ -11,16 +11,16 @@
   },
   "dependencies": {
     "@lattice/lattice": "workspace:*",
-    "@lattice/signals": "workspace:*",
     "@lattice/react": "workspace:*",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@lattice/signals": "workspace:*",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "vite": "^6.0.5",
-    "typescript": "^5.8.3"
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "5.1.2",
+    "typescript": "5.9.3",
+    "vite": "7.2.7"
   }
 }
