--- a/packages/examples/resource/package.json
+++ b/packages/examples/resource/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@lattice/lattice": "workspace:*",
+    "@lattice/resource": "workspace:*",
     "@lattice/signals": "workspace:*",
-    "@lattice/view": "workspace:*",
-    "@lattice/resource": "workspace:*"
+    "@lattice/view": "workspace:*"
   },
   "devDependencies": {
-    "typescript": "^5.8.3",
-    "vite": "^6.0.5"
+    "typescript": "5.9.3",
+    "vite": "7.2.7"
   }
 }
