--- a/packages/examples/ssr-router/package.json
+++ b/packages/examples/ssr-router/package.json
@@ -20,9 +20,9 @@
     "@lattice/view": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.8.3",
-    "vite": "^7.1.1"
+    "@types/node": "25.0.1",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3",
+    "vite": "7.2.7"
   }
 }
