--- a/packages/examples/view/package.json
+++ b/packages/examples/view/package.json
@@ -15,8 +15,8 @@
     "@lattice/view": "workspace:*"
   },
   "devDependencies": {
-    "rollup-plugin-visualizer": "^6.0.4",
-    "typescript": "^5.8.3",
-    "vite": "^6.0.5"
+    "rollup-plugin-visualizer": "6.0.5",
+    "typescript": "5.9.3",
+    "vite": "7.2.7"
   }
 }
