--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -62,19 +62,19 @@
     }
   },
   "devDependencies": {
-    "@types/react": "^18.3.20",
-    "@testing-library/react": "^16.1.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.8.3",
-    "vite": "^7.1.1",
-    "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.2.4",
-    "jsdom": "^26.0.0",
-    "@vitest/browser": "^3.2.4",
-    "eslint-plugin-react-hooks": "^5.1.0"
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.0",
+    "@types/react": "19.2.7",
+    "@vitest/browser": "4.0.15",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "jsdom": "27.3.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "rimraf": "6.1.2",
+    "typescript": "5.9.3",
+    "vite": "7.2.7",
+    "vite-plugin-dts": "4.5.4",
+    "vitest": "4.0.15"
   },
   "sideEffects": false,
   "publishConfig": {
