--- a/packages/resource/package.json
+++ b/packages/resource/package.json
@@ -51,13 +51,13 @@
     "@lattice/view": "workspace:*"
   },
   "devDependencies": {
-    "esbuild": "^0.25.8",
-    "rimraf": "^6.0.1",
-    "terser": "^5.36.0",
-    "typescript": "^5.8.3",
-    "vite": "^7.1.1",
-    "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.2.4"
+    "esbuild": "0.27.1",
+    "rimraf": "6.1.2",
+    "terser": "5.44.1",
+    "typescript": "5.9.3",
+    "vite": "7.2.7",
+    "vite-plugin-dts": "4.5.4",
+    "vitest": "4.0.15"
   },
   "sideEffects": false,
   "publishConfig": {
