--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -111,15 +111,16 @@
     "@lattice/lattice": "workspace:*"
   },
   "devDependencies": {
-    "alien-signals": "^2.0.5",
-    "esbuild": "^0.25.8",
-    "rimraf": "^6.0.1",
-    "tdd-guard-vitest": "^0.1.5",
-    "terser": "^5.36.0",
-    "typescript": "^5.8.3",
-    "vite": "^7.1.1",
-    "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.2.4"
+    "@types/node": "24.0.10",
+    "alien-signals": "3.1.1",
+    "esbuild": "0.27.1",
+    "rimraf": "6.1.2",
+    "tdd-guard-vitest": "0.1.6",
+    "terser": "5.44.1",
+    "typescript": "5.9.3",
+    "vite": "7.2.7",
+    "vite-plugin-dts": "4.5.4",
+    "vitest": "4.0.15"
   },
   "sideEffects": false,
   "publishConfig": {
