--- a/packages/signals/tsconfig.json
+++ b/packages/signals/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "rootDir": "src",
     "outDir": "dist",
-    "types": ["vitest/importMeta"],
+    "types": ["vitest/importMeta", "node"],
     "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo",
     "emitDeclarationOnly": true
   },
