--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -55,17 +55,17 @@
     "@lattice/resource": "workspace:*",
     "@lattice/signals": "workspace:*",
     "@lattice/view": "workspace:*",
-    "linkedom": "^0.18.12"
+    "linkedom": "0.18.12"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "esbuild": "^0.25.8",
-    "rimraf": "^6.0.1",
-    "terser": "^5.36.0",
-    "typescript": "^5.8.3",
-    "vite": "^7.1.1",
-    "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.2.4"
+    "@types/node": "25.0.1",
+    "esbuild": "0.27.1",
+    "rimraf": "6.1.2",
+    "terser": "5.44.1",
+    "typescript": "5.9.3",
+    "vite": "7.2.7",
+    "vite-plugin-dts": "4.5.4",
+    "vitest": "4.0.15"
   },
   "sideEffects": false,
   "publishConfig": {
