--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,15 +42,14 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          # Commented out until ready to publish to npm
-          # publish: pnpm changeset publish
+          publish: pnpm changeset publish
           version: pnpm changeset version
           commit: 'chore: version packages'
           title: 'chore: version packages'
           createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish to npm
         if: steps.changesets.outputs.published == 'true'
