--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@rimitive/devtools-extension",
+  "private": true,
   "description": "Chrome DevTools extension for debugging Rimitive applications",
   "version": "0.0.5",
   "type": "module",
