--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -18,14 +18,14 @@
     "check": "pnpm typecheck && pnpm lint"
   },
   "dependencies": {
-    "@rimitive/core": "workspace:*",
-    "@rimitive/react": "workspace:*",
-    "@rimitive/signals": "workspace:*",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-select": "2.2.6",
     "@radix-ui/react-slot": "1.2.4",
     "@radix-ui/react-tabs": "1.1.13",
+    "@rimitive/core": "workspace:*",
+    "@rimitive/react": "workspace:*",
+    "@rimitive/signals": "workspace:*",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.560.0",
@@ -33,6 +33,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-resizable-panels": "3.0.6",
+    "source-map-js": "1.2.1",
     "tailwind-merge": "3.4.0",
     "tw-animate-css": "1.4.0",
     "vaul": "1.1.2"
