--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -18,6 +18,7 @@
     "check": "pnpm typecheck && pnpm lint"
   },
   "dependencies": {
+    "@dagrejs/dagre": "1.1.8",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-select": "2.2.6",
@@ -26,6 +27,7 @@
     "@rimitive/core": "workspace:*",
     "@rimitive/react": "workspace:*",
     "@rimitive/signals": "workspace:*",
+    "@xyflow/react": "12.10.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.560.0",
