--- a/packages/devtools-extension/package.json
+++ b/packages/devtools-extension/package.json
@@ -34,6 +34,7 @@
     "postcss": "8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-json-tree": "0.20.0",
     "react-resizable-panels": "3.0.6",
     "source-map-js": "1.2.1",
     "tailwind-merge": "3.4.0",
