--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -65,6 +65,7 @@
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
     "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
     "@vitest/browser": "4.0.15",
     "eslint-plugin-react-hooks": "7.0.1",
     "jsdom": "27.3.0",
