--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Build packages
         run: pnpm build
 
+      - name: Build devtools extension zip
+        run: pnpm --filter @rimitive/devtools-extension zip
+
       - name: Create Release Pull Request
         id: changesets
         uses: changesets/action@v1
@@ -60,9 +63,12 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { publishedPackages } = ${{ steps.changesets.outputs.publishedPackages }}
+            const fs = require('fs');
+            const path = require('path');
+            const publishedPackages = ${{ steps.changesets.outputs.publishedPackages }};
+
             for (const pkg of publishedPackages) {
-              await github.rest.repos.createRelease({
+              const release = await github.rest.repos.createRelease({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 tag_name: `${pkg.name}@${pkg.version}`,
@@ -70,5 +76,27 @@ jobs:
                 body: `Published ${pkg.name} version ${pkg.version}`,
                 draft: false,
                 prerelease: false
-              })
+              });
+
+              // Upload devtools extension zip if this is the devtools-extension package
+              if (pkg.name === '@rimitive/devtools-extension') {
+                const zipDir = 'packages/devtools-extension/.output';
+                const files = fs.readdirSync(zipDir);
+                const chromeZip = files.find(f => f.endsWith('-chrome.zip'));
+
+                if (chromeZip) {
+                  const zipPath = path.join(zipDir, chromeZip);
+                  const zipContent = fs.readFileSync(zipPath);
+
+                  await github.rest.repos.uploadReleaseAsset({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    release_id: release.data.id,
+                    name: `rimitive-devtools-${pkg.version}-chrome.zip`,
+                    data: zipContent
+                  });
+
+                  console.log(`Uploaded ${chromeZip} to release`);
+                }
+              }
             }
