--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
-  packages: write
+  id-token: write
 
 jobs:
   release:
@@ -52,7 +52,7 @@ jobs:
           createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_CONFIG_PROVENANCE: true
 
       - name: Publish to npm
         if: steps.changesets.outputs.published == 'true'
