--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,17 +58,15 @@ jobs:
         if: steps.changesets.outputs.published == 'true'
         run: echo "🎉 Published to npm!"
 
-      - name: Create GitHub Release
+      - name: Create GitHub Releases
         if: steps.changesets.outputs.published == 'true'
         uses: actions/github-script@v7
         with:
           script: |
-            const fs = require('fs');
-            const path = require('path');
             const publishedPackages = ${{ steps.changesets.outputs.publishedPackages }};
 
             for (const pkg of publishedPackages) {
-              const release = await github.rest.repos.createRelease({
+              await github.rest.repos.createRelease({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 tag_name: `${pkg.name}@${pkg.version}`,
@@ -77,26 +75,52 @@ jobs:
                 draft: false,
                 prerelease: false
               });
-
-              // Upload devtools extension zip if this is the devtools-extension package
-              if (pkg.name === '@rimitive/devtools-extension') {
-                const zipDir = 'packages/devtools-extension/.output';
-                const files = fs.readdirSync(zipDir);
-                const chromeZip = files.find(f => f.endsWith('-chrome.zip'));
-
-                if (chromeZip) {
-                  const zipPath = path.join(zipDir, chromeZip);
-                  const zipContent = fs.readFileSync(zipPath);
-
-                  await github.rest.repos.uploadReleaseAsset({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    release_id: release.data.id,
-                    name: `rimitive-devtools-${pkg.version}-chrome.zip`,
-                    data: zipContent
-                  });
-
-                  console.log(`Uploaded ${chromeZip} to release`);
-                }
-              }
             }
+
+      - name: Release DevTools Extension
+        if: steps.changesets.outputs.published == 'true'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const path = require('path');
+
+            // Get devtools version from package.json
+            const pkgPath = 'packages/devtools-extension/package.json';
+            const pkg = JSON.parse(fs.readFileSync(pkgPath, 'utf8'));
+            const version = pkg.version;
+
+            // Find the zip file
+            const zipDir = 'packages/devtools-extension/.output';
+            const files = fs.readdirSync(zipDir);
+            const chromeZip = files.find(f => f.endsWith('-chrome.zip'));
+
+            if (!chromeZip) {
+              console.log('No devtools zip found, skipping');
+              return;
+            }
+
+            // Create release
+            const release = await github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: `@rimitive/devtools-extension@${version}`,
+              name: `@rimitive/devtools-extension@${version}`,
+              body: 'Chrome DevTools extension for debugging Rimitive applications.',
+              draft: false,
+              prerelease: false
+            });
+
+            // Upload zip
+            const zipPath = path.join(zipDir, chromeZip);
+            const zipContent = fs.readFileSync(zipPath);
+
+            await github.rest.repos.uploadReleaseAsset({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: release.data.id,
+              name: `rimitive-devtools-${version}-chrome.zip`,
+              data: zipContent
+            });
+
+            console.log(`Created devtools release ${version} with ${chromeZip}`);
