chore: add benchmarks to docs generation workflow
- Add bench:docs script to root package.json
- Add bench:docs to pnpm docs command
- Create commit-docs.mjs for prechangeset (llms + benchmarks)
- Keep pre-push hook as llms-only (benchmarks too slow)

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "api-collect": "mkdir -p temp && cp packages/*/temp/*.api.json temp/",
     "api-document": "pnpm api-collect && api-documenter markdown -i temp -o packages/docs/src/content/docs/api && node scripts/add-api-frontmatter.mjs",
     "generate-llms": "node scripts/generate-llms.mjs",
-    "docs": "pnpm build && pnpm api-extract && pnpm api-document && pnpm generate-llms",
-    "prechangeset": "node scripts/commit-llms.mjs",
+    "bench:docs": "pnpm --filter @rimitive/benchmarks bench:docs",
+    "docs": "pnpm build && pnpm api-extract && pnpm api-document && pnpm generate-llms && pnpm bench:docs",
+    "prechangeset": "node scripts/commit-docs.mjs",
     "changeset": "changeset",
     "version": "changeset version",
     "release": "pnpm build && changeset publish",
