fix: reduce npm package sizes by excluding build artifacts
- Update `files` field in all packages to exclude:
  - Source maps (*.map)
  - TypeScript build cache (tsconfig.tsbuildinfo)
  - Test declarations (*.test.d.ts)
- Fix react package bundling react-dom/client and scheduler
  - Add regex patterns to externals for subpath imports

Package sizes (unpacked):
- core: 112KB → 35KB
- signals: 468KB → 56KB
- view: 524KB → 121KB
- router: 176KB → 55KB
- resource: 80KB → 11KB
- ssr: 244KB → 30KB
- react: 3.5MB → 21KB

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,11 @@
     "vitest": "4.0.17"
   },
   "files": [
-    "dist",
+    "dist/**/*.js",
+    "dist/**/*.d.ts",
+    "!dist/**/*.test.d.ts",
+    "!dist/**/*.map",
+    "!dist/**/tsconfig.tsbuildinfo",
     "README.md",
     "LICENSE"
   ],
