--- a/packages/resource/package.json
+++ b/packages/resource/package.json
@@ -32,7 +32,11 @@
     }
   },
   "files": [
-    "dist",
+    "dist/**/*.js",
+    "dist/**/*.d.ts",
+    "!dist/**/*.test.d.ts",
+    "!dist/**/*.map",
+    "!dist/**/tsconfig.tsbuildinfo",
     "README.md",
     "LICENSE"
   ],
