--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -36,7 +36,11 @@
     }
   },
   "files": [
-    "dist",
+    "dist/**/*.js",
+    "dist/**/*.d.ts",
+    "!dist/**/*.test.d.ts",
+    "!dist/**/*.map",
+    "!dist/**/tsconfig.tsbuildinfo",
     "README.md",
     "LICENSE"
   ],
