fix(ci): npm OIDC publishing fixes
- Update npm to latest for OIDC support (requires 11.5.1+)
- Fix repository URLs to match npm format (git+https...git)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,9 @@ jobs:
           cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Update npm for OIDC support
+        run: npm install -g npm@latest && npm --version
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
