--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hejhi/rimitive",
+    "url": "git+https://github.com/hejhi/rimitive.git",
     "directory": "packages/signals"
   },
   "keywords": [
