fix(react): exclude test files from tsc -b

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -10,5 +10,6 @@
     "types": ["vitest/importMeta", "@testing-library/jest-dom"]
   },
   "include": ["src/**/*"],
+  "exclude": ["src/**/*.test.*", "src/test-setup.ts"],
   "references": [{ "path": "../core" }, { "path": "../signals" }]
 }
