fix(react): split tsconfig for build vs lint/IDE
- tsconfig.json includes all files (for ESLint and IDE)
- tsconfig.build.json excludes tests (for tsc -b)
- Build script now uses tsconfig.build.json

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -44,7 +44,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "pnpm typecheck && vite build && tsc -b",
+    "build": "pnpm typecheck && vite build && tsc -b tsconfig.build.json",
     "dev": "vite build --watch",
     "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
