--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rimitive"
+    "url": "https://github.com/hejhi/rimitive"
   },
   "type": "module",
   "workspaces": [
