--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "0.37.3",
+    "@rimitive/sandbox": "workspace:*",
     "astro": "5.16.11",
     "sharp": "0.34.5"
   }
