fix(ci): build dependencies before docs
The docs package imports @rimitive/sandbox which needs to be built
first. Run pnpm build to ensure all dependencies are built before
the docs build step.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Build dependencies
+        run: pnpm build
+
       - name: Build docs
         run: pnpm --filter @rimitive/docs build
 
