--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -50,8 +50,7 @@
     "@types/node": "25.2.0",
     "rimraf": "6.1.2",
     "typescript": "5.9.3",
-    "vite": "7.3.1",
-    "vite-plugin-dts": "4.5.4"
+    "vite": "7.3.1"
   },
   "sideEffects": false,
   "publishConfig": {
