--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://nx.dev/schemas/nx-schema.json",
+  "parallel": 1,
   "targetDefaults": {
     "build": {
       "dependsOn": ["^build"],
