--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "packages/examples/*"
   ],
   "scripts": {
-    "build": "lerna run build",
+    "build": "lerna run build --concurrency=1",
     "dev": "lerna run dev --parallel",
     "clean": "lerna run clean  --parallel",
     "lint": "lerna run lint",
