--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@rimitive/sandbox",
+  "private": true,
   "version": "0.1.1",
   "description": "Live code playground for Rimitive examples",
   "author": "Rimitive Team",
@@ -55,8 +56,5 @@
     "vite": "7.3.1",
     "vitest": "4.0.18"
   },
-  "sideEffects": false,
-  "publishConfig": {
-    "access": "public"
-  }
+  "sideEffects": false
 }
