feat(examples): rewrite canvas as dual-renderer demo, SSR streaming as analytics dashboard

--- a/packages/examples/ssr-router-streaming/tsconfig.server.json
+++ b/packages/examples/ssr-router-streaming/tsconfig.server.json
@@ -8,11 +8,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false
   },
-  "include": [
-    "src/server.ts",
-    "src/api.ts",
-    "src/pages/**/*",
-    "src/layouts/**/*",
-    "src/routes.ts"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/client.ts"]
 }
